--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@ and open the template in the editor.
         <a href="ifelse.jsp">If Else</a><br/>
         <a href="switchcase.jsp">Switch Case Statement</a><br/>
         <a href="forloop.jsp">For Loop</a><br/>
+        <a href="main.jsp">Includes</a><br/>
         
     </body>
 </html>
