--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,6 @@ and open the template in the editor.
         <a href="switchcase.jsp">Switch Case Statement</a><br/>
         <a href="forloop.jsp">For Loop</a><br/>
         <a href="main.jsp">Includes</a><br/>
-        
+        <a href="mainbean.jsp">Using Beans</a><br/>
     </body>
 </html>
