--- a/web/index.html
+++ b/web/index.html
@@ -18,5 +18,6 @@ and open the template in the editor.
         <a href="forloop.jsp">For Loop</a><br/>
         <a href="main.jsp">Includes</a><br/>
         <a href="mainbean.jsp">Using Beans</a><br/>
+        <a href="mainforward.jsp">Main Forward</a><br/>
     </body>
 </html>
