XML Generation with JSP

--- a/web/index.html
+++ b/web/index.html
@@ -19,5 +19,6 @@ and open the template in the editor.
         <a href="main.jsp">Includes</a><br/>
         <a href="mainbean.jsp">Using Beans</a><br/>
         <a href="mainforward.jsp">Main Forward</a><br/>
+        <a href="xml.jsp">XML Generation</a><br/>
     </body>
 </html>
