--- a/web/index.html
+++ b/web/index.html
@@ -20,5 +20,6 @@ and open the template in the editor.
         <a href="mainbean.jsp">Using Beans</a><br/>
         <a href="mainforward.jsp">Main Forward</a><br/>
         <a href="xml.jsp">XML Generation</a><br/>
+        <a href="text.jsp">JSP:text Action</a><br/>
     </body>
 </html>
