--- a/web/index.html
+++ b/web/index.html
@@ -21,5 +21,7 @@ and open the template in the editor.
         <a href="mainforward.jsp">Main Forward</a><br/>
         <a href="xml.jsp">XML Generation</a><br/>
         <a href="text.jsp">JSP:text Action</a><br/>
+        <a href="http-header-request.jsp">HTTP Header Request</a><br/>
+        <a href="http-header-request.jsp">Auto Refresh Header Example</a><br/>
     </body>
 </html>
