--- a/web/index.html
+++ b/web/index.html
@@ -23,5 +23,6 @@ and open the template in the editor.
         <a href="text.jsp">JSP:text Action</a><br/>
         <a href="http-header-request.jsp">HTTP Header Request</a><br/>
         <a href="http-header-request.jsp">Auto Refresh Header Example</a><br/>
+        <a href="http-status-code.jsp">Setting HTTP Status Code</a><br/>
     </body>
 </html>
