--- a/web/index.html
+++ b/web/index.html
@@ -24,5 +24,6 @@ and open the template in the editor.
         <a href="http-header-request.jsp">HTTP Header Request</a><br/>
         <a href="http-header-request.jsp">Auto Refresh Header Example</a><br/>
         <a href="http-status-code.jsp">Setting HTTP Status Code</a><br/>
+        <a href="main-form.jsp?first_name=ZARA&last_name=ALI">Passing Parameters in URL using GET</a><br/>
     </body>
 </html>
