Pass Data from Web Form with GET and POST

--- a/web/index.html
+++ b/web/index.html
@@ -25,5 +25,6 @@ and open the template in the editor.
         <a href="http-header-request.jsp">Auto Refresh Header Example</a><br/>
         <a href="http-status-code.jsp">Setting HTTP Status Code</a><br/>
         <a href="main-form.jsp?first_name=ZARA&last_name=ALI">Passing Parameters in URL using GET</a><br/>
+        <a href="form.jsp">HTML Form</a><br/>
     </body>
 </html>
