--- a/web/index.html
+++ b/web/index.html
@@ -26,5 +26,7 @@ and open the template in the editor.
         <a href="http-status-code.jsp">Setting HTTP Status Code</a><br/>
         <a href="main-form.jsp?first_name=ZARA&last_name=ALI">Passing Parameters in URL using GET</a><br/>
         <a href="form.jsp">HTML Form</a><br/>
+        <a href="checkbox-form.jsp">Checkbox Form</a><br/>
+        <a href="all-form2.jsp">All Form</a><br/>
     </body>
 </html>
