Database View & Insert

--- a/web/index.html
+++ b/web/index.html
@@ -28,5 +28,7 @@ and open the template in the editor.
         <a href="form.jsp">HTML Form</a><br/>
         <a href="checkbox-form.jsp">Checkbox Form</a><br/>
         <a href="all-form2.jsp">All Form</a><br/>
+        <a href="database.jsp">Database</a><br/>
+        <a href="db-insert.jsp">Insert Database</a><br/>
     </body>
 </html>
