Delete from Database

--- a/web/index.html
+++ b/web/index.html
@@ -30,5 +30,6 @@ and open the template in the editor.
         <a href="all-form2.jsp">All Form</a><br/>
         <a href="database.jsp">Database</a><br/>
         <a href="db-insert.jsp">Insert Database</a><br/>
+        <a href="db-delete.jsp">Delete Database</a><br/>
     </body>
 </html>
